objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Best_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Best Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cool_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cool Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_not_translate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do not translate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Perfect_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perfect Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Translate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Translate</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Do_not_translate</fullName>
        <active>false</active>
        <errorConditionFormula>Translate__c  = False</errorConditionFormula>
        <errorDisplayField>Translate__c</errorDisplayField>
        <errorMessage>Translate must be True</errorMessage>
    </validationRules>
</CustomObject>